# cargo-vendor-filterer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: autovendor.yml  ci.yml
ci/: selftest.sh
src/: dep_kinds.rs  dep_kinds_filtering.rs  lib.rs  main.rs  tiers.rs
tests/: integration.rs
tests/vendor_filterer/: basic.rs  common.rs  exclude.rs  format.rs  mod.rs  platform.rs  sync.rs  toml.rs  versioned_dirs.rs
