[package]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
edition = "2021"
license = "Apache-2.0"
name = "cargo-vendor-filterer"
version = "0.5.6"
description = "`cargo vendor`, but with filtering for platforms and more"
readme = "README.md"
repository = "https://github.com/cgwalters/cargo-vendor-filterer"

#### Example configuration to filter to platform
### [package.metadata.vendor-filter]
### platforms = ["x86_64-unknown-linux-gnu"]
### all-features = true
### exclude-crate-paths = [ { name = "hex", exclude = "benches" } ]

[dependencies]
anyhow = "1.0"
camino = "1.0"
cargo-lock = "8"
cargo_metadata = "0.11.3"
hex = "0.4"
toml = "0.5"
openssl = "0.10.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.80"
tempfile = "3.3.0"
smallvec = "1.9.0"
either = "1.7.0"

[dependencies.clap]
features = ["derive"]
version = "3.2"
