[package]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
name = "cargo-vendor-filterer"
version = "0.5.15"
description = "`cargo vendor`, but with filtering for platforms and more"
readme = "README.md"
repository = "https://github.com/coreos/cargo-vendor-filterer"

#### Example configuration to filter to platform
### [package.metadata.vendor-filter]
### platforms = ["x86_64-unknown-linux-gnu"]
### all-features = true
### exclude-crate-paths = [ { name = "hex", exclude = "benches" } ]

[dependencies]
anyhow = "1.0"
camino = "1.0"
cargo-lock = "10"
cargo_metadata = "0.18"
clap = { version = "4.1", features = ["derive", "wrap_help"] }
flate2 = "1.0"
hex = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3.0"
smallvec = "1.9.0"
tar = "0.4.38"
either = "1.7.0"
walkdir = "2.3.3"
serde_ignored = "0.1.7"

[target.'cfg(not(windows))'.dependencies]
openssl = "0.10.40"

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"

[features]
vendored-openssl = ["openssl/vendored"]

[dev-dependencies]
once_cell = "1.17.1"
